# solana-revenue-sharing

./: Anchor.toml
programs/solana-revenue-sharing/: Cargo.toml
programs/solana-revenue-sharing/src/: lib.rs  state.rs  utils.rs
programs/solana-revenue-sharing/src/instructions/: initialize_global_accounts.rs  mod.rs
tests/: solana-revenue-sharing.ts
